# agentic-ai

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: agent.py  endpoints.py  schemas.py
app/agents/middlewares/: __init__.py  logging.py
app/agents/prompts/: __init__.py  system.py  user.py
app/genesis/: README.md  __init__.py  client.py
app/shared/database/: __init__.py  mysql.py
app/sql_qa/: README.md  __init__.py  qa.py  schemas.py
app/sql_qa/middlewares/: __init__.py  after_agent.py  before_agent.py  data_governance.py  logging.py  redaction.py
app/sql_qa/prompts/: __init__.py  system.py
scripts/: run_ruff.py
